Clean up repository

--- a/examples/APPAgent.ipynb
+++ b/examples/APPAgent.ipynb
@@ -23,8 +23,8 @@
     "end = '2017-12-01 00:00:00'\n",
     "# end can be None to use the most recent data\n",
     "# end = None\n",
-    "load_file_path = None\n",
-    "# load_file_path = \"params2016-02-01_00:00:00/model.ckpt\"\n",
+    "# load_file_path = None\n",
+    "load_file_path = \"params2016-02-01_00:00:00/model.ckpt\"\n",
     "num_epochs=1\n",
     "\n",
     "APPAgent.fit(start, end, load_file_path, num_epochs)"
